--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="nav">
                 <a href="#" class="logo">
-                    <img src="/img/logo.jpg" alt="logo">
+                    <img src="./img/logo.jpg" alt="logo">
                 </a>
                 
                 <ul class="navigation-link">
@@ -245,7 +245,7 @@
             <div class="footer_wrapper">
                 <div class="footer_policy">
                     <a href="#" class="logo">
-                        <img src="/img/logo.jpg" alt="logo">
+                        <img src="./img/logo.jpg" alt="logo">
                     </a>
                     <div class="footer_policy-links">
                         <a href="#">Политика конфеденциальности</a>
