--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/adaptive-main.css">
+    <link rel="stylesheet" href="./css/animate.min.css">
     <title>DPlus</title>
 </head>
 <body>
@@ -66,7 +67,7 @@
         <section class="about_us">
             <div class="container">
                 <div class="about_us-wrapper">
-                    <h3 class="about_us-title">О нас</h3>
+                    <h3 class="about_us-title animate__animated animate__shakeX">О нас</h3>
 
                     <p>DPlus – все для производства мебели.
                     Добро пожаловать на сайт компании DPlus! 
