--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="#" class="logo animate__backInDown">
+                <a href="#" class="logo animate__animated animate__backInDown">
                     <img src="./img/logo.jpg" alt="logo">
                 </a>
                 
