--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="container">
                 <h3 class="catalog_title">Каталог</h3>
                 <div class="catalog_cards">
-                    <div class="catalog_card animate__animated animate__fadeInUp">
+                    <div class="catalog_card animate__animated ">
                         <div class="catalog_card-title">
                             <img src="./img/catalog/product1.jpg" alt="">
                             <h4>ЛДСП</h4>
@@ -156,7 +156,7 @@
                         <a href="#" class="catalog_card-button">заказать</a>
                     </div>
 
-                    <div class="catalog_card animate__animated animate__fadeInUp">
+                    <div class="catalog_card animate__animated ">
                         <div class="catalog_card-title">
                             <img src="./img/catalog/product1.jpg" alt="">
                             <h4>ЛДСП</h4>
@@ -166,7 +166,7 @@
                         <a href="#" class="catalog_card-button">заказать</a>
                     </div>
 
-                    <div class="catalog_card animate__animated animate__fadeInUp">
+                    <div class="catalog_card animate__animated ">
                         <div class="catalog_card-title">
                             <img src="./img/catalog/product1.jpg" alt="">
                             <h4>ЛДСП</h4>
