--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
         </section>
         <section class="about_us">
             <div class="container">
-                <div class="about_us-wrapper">
-                    <h3 class="about_us-title animate__animated animate__backInLeft">О нас</h3>
+                <div class="about_us-wrapper animate__animated">
+                    <h3 class="about_us-title">О нас</h3>
 
-                    <p class="animate__animated animate__backInLeft">DPlus – все для производства мебели.
+                    <p >DPlus – все для производства мебели.
                     Добро пожаловать на сайт компании DPlus! 
                     Расскажем вам немного о том, кто мы и откуда взялись.
                     Компания DPlus была основана в 1991 году. Изначально, фирма занималась поставкой строительных материалов. Однако, дефицит мебельных комплектующих и материалов на рынке Казахстана продиктовал дальнейшее развитие. Мы стали одной из первых компаний в стране, которая начала ввоз материалов и комплектующих для производства мебели из Европы.
                     Несколько позднее установили собственное оборудование для производства мебели и деревообработки. Помимо отладки собственного производства, компания начала предоставлять услуги по раскрою, облицовке, присадке. Кроме того DPlus занялась поставками инструмента и оборудования для производства мебели и деревообработки.
                     </p>
                     <br>
-                    <p class="animate__animated animate__backInLeft">
+                    <p >
                     Ведь в наших приоритетах всегда была поддержка частного предпринимательства.
                     Ассортимент продукции и услуг нашей компании продиктован опытом в два десятилетия. Специалисты DPlus регулярно посещают международные выставки по мебельной и деревообрабатывающей тематике в России, Польше, Германии, Италии. И, конечно же, мы не пропускаем ни одной Алматинской выставки, чтобы быть в курсе последних тенденций локального рынка. Кроме того, персонал, занимающий руководящие должности проходил обучение на заводах наших зарубежных партнеров (например, JOWAT, HOLZ-HER и т.д.).</p>
 
@@ -94,21 +94,21 @@
                         
                         <div class="benefits_cards-left">
                             
-                            <div class="benefits_card animate__animated animate__backInRight">
+                            <div class="benefits_card animate__animated сardRight">
                                 <div class="benefits_card-title">
                                     <img src="./img/creditcard-svgrepo-com.svg" alt="">
                                     <h4>Свое производство</h4>
                                 </div>
                                 <p>Самое крупное в Казахстане производство и собственные склады</p>
                             </div>
-                            <div class="benefits_card animate__animated animate__backInLeft">
+                            <div class="benefits_card animate__animated сardLeft">
                                 <div class="benefits_card-title">
                                     <img src="./img/bus-svgrepo-com.svg" alt="">
                                     <h4>Качественные материалы</h4>
                                 </div>
                                 <p>Европейская фурнитура и качественные материалы</p>
                             </div>
-                            <div class="benefits_card animate__animated animate__backInRight">
+                            <div class="benefits_card animate__animated сardRight">
                                 <div class="benefits_card-title">
                                     <img src="./img/like-svgrepo-com.svg" alt="">
                                     <h4>Доступная цена</h4>
@@ -117,21 +117,21 @@
                             </div>
                         </div>
                         <div class="benefits_card-right">
-                            <div class="benefits_card card-large animate__animated animate__backInLeft">
+                            <div class="benefits_card card-large animate__animated сardLeft">
                                 <div class="benefits_card-title">
                                     <img src="./img/site-svgrepo-com.svg" alt="">
                                     <h4>Бесплатный дизайн</h4>
                                 </div>
                                 <p>Поможем вписать вам нужный предмет интерьера в уже существующую планировку, сохраняя общий стиль, комфорт и эргономику</p>
                             </div>
-                            <div class="benefits_card animate__animated animate__backInRight">
+                            <div class="benefits_card animate__animated сardRight">
                                 <div class="benefits_card-title">
                                     <img src="./img/unlocked-svgrepo-com.svg" alt="">
                                     <h4>Бесплатная доставка</h4>
                                 </div>
                                 <p>Бесплатно доставляем кухню в любой регион Казахстана</p>
                             </div>
-                            <div class="benefits_card animate__animated animate__backInLeft">
+                            <div class="benefits_card animate__animated сardLeft">
                                 <div class="benefits_card-title">
                                     <img src="./img/subscribe-svgrepo-com.svg" alt="">
                                     <h4>Безпроцентная рассрочка</h4>
